@@ -2,7 +2,7 @@ Source: wb-nm-helper
 Section: admin
 Priority: optional
 Maintainer: Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.ru>
-Build-Depends: debhelper (>= 10), dh-python, python3-all, python3-setuptools, pkg-config, config-package-dev, python3-pytest, python3-dbus
+Build-Depends: debhelper (>= 10), dh-python, python3-all, python3-setuptools, pkg-config, config-package-dev, python3-pytest, python3-dbus, python3-dbusmock
 Standards-Version: 4.5.0
 Homepage: https://github.com/wirenboard/wb-nm-helper
 
