@@ -1,0 +1,37 @@
+# /etc/network/interfaces -- configuration file for ifup(8), ifdown(8)
+
+# The loopback interface
+auto lo
+iface lo inet loopback
+
+# Wireless interfaces
+allow-hotplug wlan0
+
+#iface wlan0 inet dhcp
+#    wpa-ssid wifiessid
+#    wpa-psk wifipassword
+
+iface wlan0 inet static
+  address 192.168.42.1
+  netmask 255.255.255.0
+
+
+auto eth0
+allow-hotplug eth0
+iface eth0 inet dhcp
+   pre-up wb-set-mac
+   hostname WirenBoard
+
+allow-hotplug eth1
+iface eth1 inet dhcp
+   pre-up wb-set-mac
+   hostname WirenBoard
+
+
+## The gsm pptp interface
+## vvv uncomment block to enable
+
+#auto ppp0
+#iface ppp0 inet ppp
+## select provider: megafon, mts or beeline below
+#  provider megafon
