@@ -2,6 +2,7 @@ wb-nm-helper (1.12.0) stable; urgency=medium
 
   * Add arguments to wb-nm-helper
   * Increase default Wi-Fi scan timeout
+  * Add nm_helper tests
 
  -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Fri, 23 Dec 2022 10:27:43 +0400
 
